manifests/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: workplanner 
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: workplanner 
    spec:
      containers:
        - name: workplanner 
          image: webappsregistryal.azurecr.io/workplanner
          ports:
          - containerPort: 80
