manifests/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: workplannerapp
spec:
  type: LoadBalancer
  selector:
    app: workplannerapp
  ports:
  - port: 80
    targetPort: 80
