manifests/kubernetes-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: spa-and-api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: workplanner
          servicePort: 5000
      - path: /
        backend:
          serviceName: workplannerapp
          servicePort: 80
